logs/pads.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PADS-0.0.20131119.egg-info'...
Listing './lib/python3.5/site-packages/pads'...
Compiling './lib/python3.5/site-packages/pads/AcyclicReachability.py'...
***   File "./lib/python3.5/site-packages/pads/AcyclicReachability.py", line 29
    bits = 1L<<k
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pads/IntegerHeap.py'...
***   File "./lib/python3.5/site-packages/pads/IntegerHeap.py", line 64
    self._S = 0L
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pads/IntegerPartitions.py'...
***   File "./lib/python3.5/site-packages/pads/IntegerPartitions.py", line 244
    print "last:",last,"p:",p
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pads/ReadUndirectedGraph.py'...
***   File "./lib/python3.5/site-packages/pads/ReadUndirectedGraph.py", line 38
    raise GraphFormatError, 'Number expected: "%s"' % s
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pads/SVG.py'...
***   File "./lib/python3.5/site-packages/pads/SVG.py", line 84
    print "".join(output)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pads/SortedSet.py'...
***   File "./lib/python3.5/site-packages/pads/SortedSet.py", line 95
    print "Testing SortedSet.py"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pads/Sudoku.py'...
***   File "./lib/python3.5/site-packages/pads/Sudoku.py", line 49
    mask |= 1L << (x*3**i + y*3**j + w*3**h + z*3**k)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pads/xyzGraph.py'...
***   File "./lib/python3.5/site-packages/pads/xyzGraph.py", line 36
    for B in xrange(1L<<(len(L)//2 - 1)):
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
